<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITT</string>
    <string name="version">1.3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="itt_messaging">ITT Messaging</string>
    <string name="activiate">Activate</string>
    <string name="truck_id">TID:</string>
    <string name="device_id">Device ID:</string>
    <string name="msg_datetime">Time:</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="back_to_list">History</string>
    <string name="setting">Setting</string>
    <string name="language">Langauge</string>
    <string name="zhtc">繁體中文</string>
    <string name="zhsc">简体中文</string>
    <string name="en">English</string>
    <string name="contact_us">Contact us</string>
    <string name="no_msg">No new message</string>
    <string name="hotline">Technical Support: 3669 1409</string>
    <string name="setting_underline"><u>Setting</u></string>
    <string name="contactus_underline"><u>ContactUs</u></string>
    <string name="contactus_tech">Technical Support</string>
    <string name="no_connection">No Connection</string>
    <string name="update_tv">New Version Update</string>
    <string name="version_tv">Version:</string>
    <string name="act_contact">2991 8049</string>
    <string name="cosco_contact">2991 8049</string>
    <string name="hit_contact">2619 7957</string>
    <string name="mod_contact">2115 2609</string>
    <string name="dpw_contact">2489 4744</string>
    <string name="not_support">Incompatible device</string>

    <string-array name="language_arr">
        <item>繁體中文</item>
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string name="reconnected">Reconnected to network</string>
    <string name="server_connection_failed">Failed to connect to server</string>
    
    <!-- new format for isntruction messages  -->
    <string name="fg_r01b_content">Go to [%1$s] pick up</string>
    
    <string name="fg_r003_content_pt">Pick up at [%1$s]</string>
    <string name="fg_r003_content_ctnr_f">F: %1$s[%2$s]</string>
    <string name="fg_r003_content_ctnr_a">A: %1$s[%2$s]</string>
    <string name="fg_r003_content_gt">Ground at [%1$s]</string>

    <string name="fg_r007_txt_content_gt">Ground at [%1$s]</string>
    <string name="fg_r007_txt_ctnr_f">F: %1$s[%2$s]</string>
    <string name="fg_r007_txt_ctnr_a">A: %1$s[%2$s]</string>
    <string name="fg_r007_txt_next_pt">Then Pick up at [%1$s]</string>
    <string name="fg_r007_txt_ctnr_f2">F: %1$s[%2$s]</string>
    <string name="fg_r007_txt_ctnr_a2">A: %1$s[%2$s]</string>
    <string name="fg_r007_txt_next_gt">And Ground at [%1$s]</string>
</resources>