<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" />

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="9dp"
            android:background="@null"
            android:gravity="center"
            android:singleLine="true"
            android:src="@drawable/refresh"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <TextView
            android:id="@+id/txtTrackID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1.7"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/truck_id"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <TextView
            android:id="@+id/txtMsgTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1.40"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:text="@string/msg_datetime"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.63"
            android:background="@drawable/roundedbg_black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_label_size" />
        
           <RelativeLayout
               android:id="@+id/panel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="1dp" >
	        
	        <ImageView
	            android:id="@+id/imgBatteryLevel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"		            
	            android:layout_marginTop="10dp"	            
	            android:background="@null"
	            android:singleLine="true"
	            android:visibility="visible"
	            android:src="@drawable/ic_battery_full_black_18dp"/>
	        
	        <ImageView
	            android:id="@+id/imgNetworkStatus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/imgBatteryLevel"		            
	            android:layout_marginBottom="5dp"
	            android:background="@null"
	            android:singleLine="true"
	            android:visibility="visible"
	            android:src="@drawable/ic_network_status_connected"/>
	    </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnBackToList"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/back_to_list"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />

            <Button
                android:id="@+id/btnContactUs"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/transparent_black"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/main_page_menu_size" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgMqttConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/green_corner" />

</RelativeLayout>